# roa_policy

./: .gitignore  CMakeLists.txt  README.md
ang_vel_observation/: model_info.md
cmake/: roa_policy_driverConfig.cmake.in
gravity_observation/: model_info.md
gravity_observation/model_110000/: policy.onnx  policy.pt
include/roa_policy_driver/: policy_driver.hpp
src/: policy_driver.cpp
tests/: test_dimensions.cpp  test_golden_io.cpp  test_stress.cpp
